module(
    name = "busybus",
    repo_name = "com_github_taylormonacelli_busybus",
)

bazel_dep(name = "gazelle", version = "0.41.0")
bazel_dep(name = "rules_go", version = "0.51.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

use_repo(go_deps,
    "com_github_taylormonacelli_forestfish",
    "com_github_taylormonacelli_goldbug"
)
