load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/taylormonacelli/busybus/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//:busybus",
        "@com_github_taylormonacelli_goldbug//:goldbug",
    ],
)

go_binary(
    name = "busybus",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
